--- a/.env.sample
+++ b/.env.sample
@@ -14,4 +14,4 @@ ENGINE_IMPLICIT_RETURNING=FALSE
 ENGINE_POOL_SIZE=20
 ENGINE_POOL_RECYCLE=3600
 
-GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_APPLICATION_CREDENTIALS=../credentials.json
