--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ orjson = "^3.8.7"
 prometheus-fastapi-instrumentator = "^5.7.1"
 psycopg2-binary = "^2.9.1"
 pybase64 = "^1.2.3"
+google-cloud-firestore = "^2.16.0"
+firebase-admin = "^6.5.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.2"
