--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,4 @@ ENGINE_POOL_SIZE=20
 ENGINE_POOL_RECYCLE=3600
 
 GOOGLE_APPLICATION_CREDENTIALS=../credentials.json
+FIREBASE_STORAGE_BUCKET=hackathonbisentiment-59be0.appspot.com
