--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.1"
 pybase64 = "^1.2.3"
 google-cloud-firestore = "^2.16.0"
 firebase-admin = "^6.5.0"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.2"
