--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Adrian <adrianxwijaya@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.93.0"}
 SQLAlchemy = "^1.4.46"
 orjson = "^3.8.7"
@@ -15,6 +15,16 @@ pybase64 = "^1.2.3"
 google-cloud-firestore = "^2.16.0"
 firebase-admin = "^6.5.0"
 pydub = "^0.25.1"
+langchain = "^0.2.1"
+langchain-community = "^0.2.1"
+joblib = "^1.4.2"
+librosa = "^0.10.2.post1"
+tensorflow = "^2.16.1"
+huggingface-hub = "^0.23.2"
+pypdf = "^4.2.0"
+torch = "^2.3.0"
+qdrant-client = "^1.9.1"
+sentence-transformers = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.2"
