make request as async and fix update sentiment logic

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,5 @@ ENGINE_POOL_RECYCLE=3600
 
 GOOGLE_APPLICATION_CREDENTIALS=../credentials.json
 FIREBASE_STORAGE_BUCKET=hackathonbisentiment-59be0.appspot.com
+
+HUGGINGFACE_HUB_API_TOKEN=
